[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wwvb-emulator"
version = "0.1.0"
description = "Emulate the WWVB 60 kHz time signal through a sound card so radio-controlled clocks can sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
]

[project.scripts]
wwvb-emulator = "wwvb_emulator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
